syntax = "proto3";
package protos;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/vipulvpatil/airetreat-go/protos";

message TestRequest {
  string test = 1;
}

message TestResponse {
  string test = 1;
}

message GetPlayerIdRequest {}

message GetPlayerIdResponse {
  string playerId = 1;
}

message CreateGameRequest {
  string playerId = 1;
}

message CreateGameResponse {
  string gameId = 1;
}

message JoinGameRequest {
  string playerId = 1;
  string gameId = 2;
}

message JoinGameResponse {}

message SendMessageRequest {
  string gameId = 1;
  string playerId = 2;
  string botId = 3;
  string text = 4;
}

message SendMessageResponse {}

message GetGameForPlayerRequest {
  string gameId = 1;
  string playerId = 2;
}

message GetGameForPlayerResponse {
  string state = 1;
	string displayMessage = 2;
	google.protobuf.Timestamp stateStartedAt = 3;
	int64 stateTotalTime = 4;
	string lastQuestion = 5;
	string myBotId = 7;
	repeated Bot bots = 8;
  repeated string conversation = 9;
}

message Bot {
  string id = 1;
  string name = 2;
  repeated BotMessage botMessages = 3;
}

message BotMessage {
  string text = 1;
}

message GetGamesForPlayerRequest {
  string playerId = 1;
}

message GetGamesForPlayerResponse {
  repeated string gameIds = 1;
}

service AiRetreatGo {
  rpc Test(TestRequest) returns (TestResponse) {}
  rpc GetPlayerId(GetPlayerIdRequest) returns (GetPlayerIdResponse) {}
  rpc CreateGame(CreateGameRequest) returns (CreateGameResponse) {}
  rpc JoinGame(JoinGameRequest) returns (JoinGameResponse) {}
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {}
  rpc GetGameForPlayer(GetGameForPlayerRequest) returns (GetGameForPlayerResponse) {}
  rpc GetGamesForPlayer(GetGamesForPlayerRequest) returns (GetGamesForPlayerResponse) {}
}

message CheckRequest {}
message CheckResponse {}

service AiRetreatGoHealth {
  rpc Check(CheckRequest) returns (CheckResponse) {}
}
